--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.8'
 services:
   dev-db:
-    image: postgres:13
+    image: postgres:latest
     ports:
       - 5434:5432
     environment:
