--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,17 @@ services:
     networks:
       - freecodecamp
 
+
+  test-db:
+    image: postgres:latest
+    ports:
+      - 5435:5432
+    environment:
+      POSTGRES_PASSWORD: 123
+      POSTGRES_USER: postgres
+      POSTGRES_DB: nest
+    networks:
+      - freecodecamp
+
 networks:
   freecodecamp:
